force-app/main/default/objects/Account/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Allergy</fullName>
            </value>
            <value>
                <fullName>Pet Allergy</fullName>
            </value>
            <value>
                <fullName>Drug Allergy</fullName>
            </value>
            <value>
                <fullName>Pollen Allergy</fullName>
            </value>
            <value>
                <fullName>Latex Allergy</fullName>
            </value>
            <value>
                <fullName>Mold Allergy</fullName>
            </value>
            <value>
                <fullName>Insect and Pest Allergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>