force-app/main/default/objects/Account/fields/Allergies_breakdown__c.field-meta.xml
<CustomField>
    <fullName>Allergies_breakdown__c</fullName>
    <label>Allergies breakdown</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milk.</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Fish (e.g., bass, flounder, cod)</fullName>
            </value>
            <value>
                <fullName>Crustacean shellfish (e.g., crab, lobster, shrimp)</fullName>
            </value>
            <value>
                <fullName>Tree nuts (e.g., almonds, walnuts, pecans)</fullName>
            </value>
            <value>
                <fullName>Peanuts</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Soybeans</fullName>
            </value>
            <value>
                <fullName>Cats</fullName>
            </value>
            <value>
                <fullName>Dogs</fullName>
            </value>
            <value>
                <fullName>Rabbits</fullName>
            </value>
            <value>
                <fullName>Guinea pigs</fullName>
            </value>
            <value>
                <fullName>Hamsters</fullName>
            </value>
            <value>
                <fullName>Penicillin and related antibiotics</fullName>
            </value>
            <value>
                <fullName>Antibiotics containing sulfonamides (sulfa drugs)</fullName>
            </value>
            <value>
                <fullName>Anticonvulsants</fullName>
            </value>
            <value>
                <fullName>Aspirin</fullName>
            </value>
            <value>
                <fullName>Ibuprofen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>