force-app/main/default/objects/Account/fields/Bread_Winner__BW_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Bread_Winner__BW_Account_Status__c</fullName>
    <formula>IF( Bread_Winner__Total_Amount_Invoiced__c = 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/never-billed.png&quot;,&quot;Never Billed&quot;), 

IF( Bread_Winner__Total_Amount_Overdue__c &gt; 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/overdue.png&quot;,&quot;Overdue&quot;), 

IF( Bread_Winner__Total_Amount_Due__c &gt; 0, 
IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/due.png&quot;,&quot;Due&quot;), 

IMAGE ( &quot;https://bw-cdn.s3.amazonaws.com/paid.png&quot;,&quot;Paid&quot;) 

) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BW Account Status</label>
    <type>Text</type>
</CustomField>