force-app/main/default/objects/Account/fields/Bread_Winner__Total_Amount_Credit__c.field-meta.xml
<CustomField>
    <fullName>Bread_Winner__Total_Amount_Credit__c</fullName>
    <description>Total Amount Credited is sum of Amount Credited field in related Invoices. Amount Credited field in Invoice is the total amount allocated to Invoice via Credit Notes, Over Payments and Pre Payments</description>
    <label>Total Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>