force-app/main/default/objects/Account/fields/Bread_Winner__Total_Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bread_Winner__Total_Draft_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of draft invoices</description>
    <label>Total Draft Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>