force-app/main/default/objects/Account/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>to store lead information state</description>
    <inlineHelpText>Employer Identification Number</inlineHelpText>
    <label>EIN</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>