force-app/main/default/objects/Account/fields/Has_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Has_Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Allergies</label>
    <type>Checkbox</type>
</CustomField>