force-app/main/default/objects/Account/fields/Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin__c</fullName>
    <label>Next of Kin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>