force-app/main/default/objects/Account/fields/Next_of_Kin_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Relationship__c</fullName>
    <label>Next of Kin Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Siblings</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Grandparents</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Nieces and nephews</fullName>
            </value>
            <value>
                <fullName>Cousins</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>