force-app/main/default/objects/Account/recordTypes/Nurse.recordType-meta.xml
<RecordType>
    <fullName>Nurse</fullName>
    <active>false</active>
    <label>Nurse</label>
</RecordType>