force-app/main/default/objects/Account/validationRules/Account_EINfieldValidation25.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_EINfieldValidation25</fullName>
    <active>true</active>
    <description>I want to validate Employer Identification Number field,
So that I can prevent human error on data entry.

Requirement:
*EIN field should contain only number,
*EIN field should be unique,
*EIN field should be 9 digits.</description>
    <errorConditionFormula>NOT(REGEX(  EIN__c , &quot;[0-9]{9}&quot;) || LEN(  EIN__c )=0 )</errorConditionFormula>
    <errorDisplayField>EIN__c</errorDisplayField>
    <errorMessage>EIN field should contain only number and should be 9 digits.</errorMessage>
</ValidationRule>