force-app/main/default/objects/Account/validationRules/Person_Acc_Com_Channels_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Acc_Com_Channels_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>And(
    PersonDoNotCall,
    PersonHasOptedOutOfEmail 
   )</errorConditionFormula>
    <errorDisplayField>PersonDoNotCall</errorDisplayField>
    <errorMessage>Do Not Call and Email Opt Out field can not be selected together!!!!</errorMessage>
</ValidationRule>