force-app/main/default/objects/Account/validationRules/Person_Account_Email_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_Email_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IsPersonAccount 
    &amp;&amp;
PersonDoNotCall 
    &amp;&amp;
 ISBLANK( PersonEmail )</errorConditionFormula>
    <errorMessage>Email field must be populated if phone communication is opted out.</errorMessage>
</ValidationRule>