force-app/main/default/objects/Account/validationRules/Person_Account_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_SSN</fullName>
    <active>true</active>
    <errorConditionFormula>IsPersonAccount &amp;&amp;


NOT(REGEX( SSN__c  , &quot;[0-9]{9}&quot;) || LEN( SSN__c )=0)</errorConditionFormula>
    <errorMessage>*SSN field should contain only number,
*SSN field should be unique,
*SSN field should be 9 digits.</errorMessage>
</ValidationRule>