force-app/main/default/objects/Account/listViews/Bread_Winner__Accounts_with_Xero_Invoices.listView-meta.xml
<ListView>
    <fullName>Bread_Winner__Accounts_with_Xero_Invoices</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Bread_Winner__BW_Account_Status__c</columns>
    <columns>Bread_Winner__Total_Amount_Overdue__c</columns>
    <columns>Bread_Winner__Total_Amount_Due__c</columns>
    <columns>Bread_Winner__Total_Amount_Paid__c</columns>
    <columns>Bread_Winner__Total_Amount_Invoiced__c</columns>
    <columns>Bread_Winner__Total_Amount_Credit__c</columns>
    <columns>Bread_Winner__Total_Unallocated_Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bread_Winner__Total_Amount_Invoiced__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Accounts with Xero Invoices</label>
</ListView>